[gd_scene format=3 uid="uid://ysxy4coxw032"]

[ext_resource type="Script" uid="uid://c83yfkej01ytu" path="res://inventory_ui.gd" id="1_5bar6"]
[ext_resource type="Texture2D" uid="uid://b8gokj70ud2ku" path="res://Assets/UI/Inventory1.png" id="3_mefrt"]
[ext_resource type="PackedScene" uid="uid://ceh1a2cjhu3mc" path="res://Escenas/HUD/slot.tscn" id="4_pmwta"]

[node name="InventoryUI" type="CanvasLayer" unique_id=397857730]
process_mode = 3
script = ExtResource("1_5bar6")
metadata/_edit_horizontal_guides_ = [145.0, 15.0]

[node name="ControlPrincipal" type="Control" parent="." unique_id=1173261994]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -104.0
offset_right = -146.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="ControlPrincipal" unique_id=924093860]
layout_mode = 0
offset_right = 308.46692
offset_bottom = 223.0
texture = ExtResource("3_mefrt")

[node name="referencia" type="TextureRect" parent="ControlPrincipal/TextureRect" unique_id=290953415]
visible = false
layout_mode = 0
offset_right = 308.46692
offset_bottom = 223.0
texture = ExtResource("3_mefrt")

[node name="GridMochila" type="GridContainer" parent="ControlPrincipal" unique_id=1800167566]
layout_mode = 0
offset_left = 160.0
offset_top = 15.0
offset_right = 299.0
offset_bottom = 151.0
theme_override_constants/h_separation = 49
theme_override_constants/v_separation = 47
columns = 3

[node name="Slot" parent="ControlPrincipal/GridMochila" unique_id=1718879069 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot2" parent="ControlPrincipal/GridMochila" unique_id=1308905635 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot3" parent="ControlPrincipal/GridMochila" unique_id=255046055 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot4" parent="ControlPrincipal/GridMochila" unique_id=1486607939 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot5" parent="ControlPrincipal/GridMochila" unique_id=1504959753 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot6" parent="ControlPrincipal/GridMochila" unique_id=1997670334 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot7" parent="ControlPrincipal/GridMochila" unique_id=1851327436 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot8" parent="ControlPrincipal/GridMochila" unique_id=1926843489 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot9" parent="ControlPrincipal/GridMochila" unique_id=1388072608 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="RowMascaras" type="HBoxContainer" parent="ControlPrincipal" unique_id=97620170]
layout_mode = 0
offset_left = 13.0
offset_top = 170.0
offset_right = 299.0
offset_bottom = 212.0
theme_override_constants/separation = 49

[node name="Slot" parent="ControlPrincipal/RowMascaras" unique_id=721859463 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot2" parent="ControlPrincipal/RowMascaras" unique_id=210010108 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot3" parent="ControlPrincipal/RowMascaras" unique_id=66691906 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot4" parent="ControlPrincipal/RowMascaras" unique_id=453290128 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot5" parent="ControlPrincipal/RowMascaras" unique_id=1265546459 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot6" parent="ControlPrincipal/RowMascaras" unique_id=299333249 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="ColEquipo" type="VBoxContainer" parent="ControlPrincipal" unique_id=1157263456]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 55.0
offset_bottom = 150.0
theme_override_constants/separation = 47

[node name="Slot" parent="ControlPrincipal/ColEquipo" unique_id=2111697749 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot2" parent="ControlPrincipal/ColEquipo" unique_id=217483483 instance=ExtResource("4_pmwta")]
layout_mode = 2

[node name="Slot3" parent="ControlPrincipal/ColEquipo" unique_id=1932611778 instance=ExtResource("4_pmwta")]
layout_mode = 2
